--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
     <title>desi.gn</title>
 </head>
 <body>
-    
+    <header class="parent">
+        <div id="logo">
+            <img src="logo.png" alt="logo">
+        </div>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Pricing & Plans</a></li>
+        </ul>
+        <ol>
+            <li><a href="#">Sign in</a></li>
+            <li><a href="#"><button> Try for fre</button></a></li>
+        </ol>
+   
+    </header>
     <footer>
         <p>Made with <span class="heart"></span> by {Challenger}</p>
     </footer>
