--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="parent">
         <div id="logo">
-            <img src="logo.png" alt="logo">
+            <img src="img/logo.png" alt="logo">
         </div>
         <ul>
             <li><a href="#">Home</a></li>
@@ -21,8 +21,33 @@
             <li><a href="#">Sign in</a></li>
             <li><a href="#"><button> Try for fre</button></a></li>
         </ol>
-   
     </header>
+    <!-- banner -->
+
+    <div class="banner">
+
+        <!-- Redouan-->
+        <div class="left">
+            <h1 class="bannerTitle">Unlimited Designs.<br> Flat Monthly Fee</h1>
+            <p>Get unlimited designs in areas such as web design. app design,<br> brochures and much more for a flat
+                monthly fee. No additional charges.</p>
+            <form>
+                <input type="email" required placeholder="Enter e-mail address" name="email">
+                <button type="submit">Try for free</button>
+            </form>
+            <div class="checkmark">
+                <img src="img/Checkmark.png" alt="image not found">
+                <span>day money back guarantee</span>
+                <img class="creditIcon" src="img/Checkmark.png" alt="image not found">
+                <span>No credit card required</span>
+            </div>
+        </div>
+        <div class="right">
+            <img src="img/BG_Hero.png" alt="img not found">
+        </div>
+
+    </div>
+
     <footer>
         <p>Made with <span class="heart"></span> by {Challenger}</p>
     </footer>
