ajout des cartes our-advantages par Mehdi

--- a/index.html
+++ b/index.html
@@ -45,8 +45,50 @@
         <div class="right">
             <img src="img/BG_Hero.png" alt="img not found">
         </div>
-
     </div>
+    <!---------------------------->
+
+    <!-- Mehdi -->
+    <div class="our_adventages">
+        <div>
+            <div>
+                <img src="img/📤.png" alt="">
+            </div>
+            <div>
+                <h2>Request Design</h2>
+                <p>Send us a message with all the details. At any time during the day. Through <strong>Discord, Slack,</strong> or even <strong>WhatsApp.</strong></p>
+            </div>
+        </div>
+        <div>
+            <div>
+                <img src="img/🤸.png" alt="">
+            </div>
+            <div>
+                <h2>Quick Response</h2>
+                <p>One of our designers will get back to you within 24 hrs detailing the time frame you will be receiving your designs.</p>
+            </div>
+        </div>
+        <div>
+            <div>
+                <img src="img/📚.png" alt="">
+            </div>
+            <div>
+                <h2>Revisions.</h2>
+                <p>Unlimited revisions are included in all our plans. At no extra fee whatsoever so that we can ensure you love the final designs.</p>
+            </div>
+        </div>
+        <div>
+            <div>
+                <img src="img/🎉.png" alt="">
+            </div>
+            <div>
+                <h2>All done.</h2>
+                <p>Done with one project? No problem, keep asking for more, it's all included in the price. Again, at no extra fee whatsoever!</p>
+            </div>
+        </div>
+    </div>
+    <!---------------------------->
+
 
     <footer>
         <p>Made with <span class="heart"></span> by {Challenger}</p>
