--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="title" align="center" style="width:110px"><h4>Entreprise</4></div>
             <input type="button" class="action" value="Schedule consultancy call">
             <p class="text">We offer customizable plans for enterprises who are looking to make use of our service.</p>
-            <p style="font-size:large;font-weight: bolder;margin-top:70px;color: black;">Contact Us</p>
+           <a href="contact-us.html"style="text-decoration:none;"><p style="font-size:large;font-weight: bolder;margin-top:70px;color: black;">Contact Us</p></a>
            
         </div>
         <div class="card4">
